--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="time">Time</string>
+    <string name="amount">Amount</string>
 </resources>
