--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="yes">Yes</string>
     <string name="cancel">Cancel</string>
     <string name="confirm">Confirm</string>
-    <string name="are_you_sure_delete_medicine">Do you really want to delete the medicine?</string>
+    <string name="are_you_sure_delete_medicine">Are you sure to delete the medicine?</string>
 </resources>
