--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,6 @@
     <string name="notification_taken">TAKEN</string>
     <string name="taken">Taken</string>
     <string name="skipped">Skipped</string>
-    <string name="reminder_event">Taken %1s of %2s\n%3s</string>
+    <string name="reminder_event">%1s of %2s\n%3s</string>
     <string name="recent_reminders">Recent reminders</string>
 </resources>
