--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,8 +20,8 @@
         <item quantity="one">1 reminder per day</item>
         <item quantity="other">%1d reminders per day</item>
     </plurals>
-    <string name="channel_name">MedTimer</string>
-    <string name="channel_description">Notifications from MedTimer</string>
+    <string name="channel_name" translatable="false">MedTimer</string>
+    <string name="channel_description" translatable="false">Notifications from MedTimer</string>
     <string name="notification_title">Medicine reminder</string>
     <string name="notification_content">It is time to take %1s of %2s</string>
     <string name="notification_taken">TAKEN</string>
