--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="reminder_event">%1s of %2s\n%3s</string>
     <string name="recent_reminders">Recent reminders</string>
     <string name="next_reminder">Next reminder</string>
+    <string name="version">Version %1s</string>
 </resources>
