--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="channel_name" translatable="false">MedTimer</string>
     <string name="channel_description" translatable="false">Notifications from MedTimer</string>
     <string name="notification_title">Medicine reminder</string>
-    <string name="notification_content">It is time to take %1s of %2s</string>
+    <string name="notification_content">%1s - it is time to take %1s of %2s</string>
     <string name="notification_taken">TAKEN</string>
     <string name="taken">Taken</string>
     <string name="skipped">Skipped</string>
