--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="recent_reminders">Recent reminders</string>
     <string name="next_reminder">Next reminder</string>
     <string name="version">Version %1s</string>
+    <string name="are_you_sure_delete_reminder">Are you sure to delete the reminder?</string>
 </resources>
