--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -31,4 +31,7 @@
     </plurals>
     <string name="version">Version %1s</string>
     <string name="are_you_sure_delete_reminder">Erinnerung wirklich löschen?</string>
+    <string name="clear_events">Ereignisse zurücksetzen</string>
+    <string name="app_version">App-Version</string>
+    <string name="are_you_sure_delete_events">Ereignisse wirklich zurücksetzen?</string>
 </resources>
