--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="next_reminder">Next reminder</string>
     <string name="version">Version %1s</string>
     <string name="are_you_sure_delete_reminder">Are you sure to delete the reminder?</string>
+    <string name="clear_events">Clear events</string>
+    <string name="app_version">App version</string>
+    <string name="are_you_sure_delete_events">Are you sure to delete all events?</string>
 </resources>
