--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,8 +17,8 @@
     <string name="are_you_sure_delete_medicine">Are you sure to delete the medicine?</string>
     <string name="no_reminders">No reminders set</string>
     <plurals name="reminders_per_day">
-        <item quantity="one">1 reminder per day</item>
-        <item quantity="other">%1d reminders per day</item>
+        <item quantity="one">%1d reminder per day\n%2s</item>
+        <item quantity="other">%1d reminders per day\n%2s</item>
     </plurals>
     <string name="channel_name" translatable="false">MedTimer</string>
     <string name="channel_description" translatable="false">Notifications from MedTimer</string>
