--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,20 +17,20 @@
     <string name="are_you_sure_delete_medicine">Are you sure to delete the medicine?</string>
     <string name="no_reminders">No reminders set</string>
     <plurals name="reminders_per_day">
-        <item quantity="one">%1d reminder per day\n%2s</item>
-        <item quantity="other">%1d reminders per day\n%2s</item>
+        <item quantity="one">%1$d reminder per day\n%2$s</item>
+        <item quantity="other">%1$d reminders per day\n%2$s</item>
     </plurals>
     <string name="channel_name" translatable="false">MedTimer</string>
     <string name="channel_description" translatable="false">Notifications from MedTimer</string>
     <string name="notification_title">Medicine reminder</string>
-    <string name="notification_content">%1s - it is time to take %1s of %2s</string>
+    <string name="notification_content">%1$s - it is time to take %2$s of %3$s</string>
     <string name="notification_taken">TAKEN</string>
     <string name="taken">Taken</string>
     <string name="skipped">Skipped</string>
-    <string name="reminder_event">%1s of %2s\n%3s</string>
+    <string name="reminder_event">%1$s of %2$s\n%3$s</string>
     <string name="recent_reminders">Recent reminders</string>
     <string name="next_reminder">Next reminder</string>
-    <string name="version">Version %1s</string>
+    <string name="version">Version %s</string>
     <string name="are_you_sure_delete_reminder">Are you sure to delete the reminder?</string>
     <string name="clear_events">Clear events</string>
     <string name="app_version">App version</string>
