--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -29,9 +29,10 @@
         <item quantity="one">%1$d Erinnerung pro Tag\n%2$s</item>
         <item quantity="other">%1$d Erinnerungen pro Tag\n%2$s</item>
     </plurals>
-    <string name="version">Version %ss</string>
+    <string name="version">Version %s</string>
     <string name="are_you_sure_delete_reminder">Erinnerung wirklich löschen?</string>
     <string name="clear_events">Ereignisse zurücksetzen</string>
     <string name="app_version">App-Version</string>
     <string name="are_you_sure_delete_events">Ereignisse wirklich zurücksetzen?</string>
+    <string name="export">Daten exportieren</string>
 </resources>
