--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,5 @@
     <string name="twenty_four_hours">24 hours</string>
     <string name="two_days">2 days</string>
     <string name="three_days">3 days</string>
-    <string name="app_url">MedTimer on Github</string>
+    <string name="app_url">MedTimer on GitHub</string>
 </resources>
