--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -48,4 +48,6 @@
     <string name="two_days">2 Tage</string>
     <string name="three_days">3 Tage</string>
     <string name="app_url">MedTimer bei GitHub</string>
+    <string name="color">Farbe</string>
+    <string name="select_color">Farbe auswählen</string>
 </resources>
