--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -18,7 +18,7 @@
     <string name="are_you_sure_delete_medicine">Medikament wirklich löschen?</string>
     <string name="no_reminders">Keine Erinnerungen</string>
     <string name="notification_title">Erinnerung an ein Medikament</string>
-    <string name="notification_content">%1$s - es ist Zeit %2$s von %3$s einzunehmen</string>
+    <string name="notification_content">Es ist %1$s Uhr - Zeit, %2$s von %3$s einzunehmen</string>
     <string name="notification_taken">EINGENOMMEN</string>
     <string name="taken">Eingenommen</string>
     <string name="skipped">Übersprungen</string>
@@ -51,4 +51,5 @@
     <string name="color">Farbe</string>
     <string name="select_color">Farbe auswählen</string>
     <string name="take_over">Übernehmen</string>
+    <string name="exact_reminders">Exakte Erinnerungen</string>
 </resources>
