Show a toast when changing colors

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -52,4 +52,5 @@
     <string name="select_color">Farbe auswählen</string>
     <string name="take_over">Übernehmen</string>
     <string name="exact_reminders">Exakte Erinnerungen</string>
+    <string name="change_color_toast">Änderungen an den Farben wirken sich nur auf neue Erinnerungen aus</string>
 </resources>
