Add setting for exact alarms

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -53,4 +53,6 @@
     <string name="exact_reminders">Exakte Erinnerungen</string>
     <string name="change_color_toast">Änderungen an den Farben wirken sich nur auf neue Erinnerungen aus</string>
     <string name="permission_not_granted">Berechtigung nicht erteilt</string>
+    <string name="exact_reminders_summary">Erinnerungen werden genau zur eingestellten Zeit erzeugt (erhöhter Batterieverbrauch)</string>
+    <string name="enable_alarm_dialog">Um die Erstellung von exakten Erinnerungen zu ermöglichen, erlaube dies im folgenden Menü</string>
 </resources>
