--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="exact_reminders">Exact reminders</string>
     <string name="change_color_toast">Note that changes in color only take effect in future reminders</string>
     <string name="permission_not_granted">Permission not granted</string>
+    <string name="exact_reminders_summary">Reminders are scheduled at the exact time (increases battery usage)</string>
+    <string name="enable_alarm_dialog">In order to allow scheduling exact alarms, enable this for MedTimer in the following menu</string>
 </resources>
