--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -55,4 +55,5 @@
     <string name="permission_not_granted">Berechtigung nicht erteilt</string>
     <string name="exact_reminders_summary">Erinnerungen werden genau zur eingestellten Zeit erzeugt (erhöhter Batterieverbrauch)</string>
     <string name="enable_alarm_dialog">Um die Erstellung von exakten Erinnerungen zu ermöglichen, erlaube dies im folgenden Menü</string>
+    <string name="generate_test_data">Testdaten generieren</string>
 </resources>
