--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="edit">Edit</string>
     <string name="delete">Delete</string>
     <string name="time">Time</string>
-    <string name="amount">Amount</string>
+    <string name="dosage">Dosage</string>
     <string name="yes">Yes</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
@@ -57,4 +57,5 @@
     <string name="exact_reminders_summary">Reminders are scheduled at the exact time (increases battery usage)</string>
     <string name="enable_alarm_dialog">In order to allow scheduling exact alarms, enable this for MedTimer in the following menu</string>
     <string name="generate_test_data">Generate test data</string>
+    <string name="create_reminder_dosage_hint">Dosage for new reminder</string>
 </resources>
