--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -110,4 +110,5 @@
     <string name="cycle_start_date">Beginn des ersten Zyklus</string>
     <string name="cycle_reminders">Zyklische Erinnerungen</string>
     <string name="weekday_limited">Auf manche Wochentage beschränkt</string>
+    <string name="reminders">Erinnerungen</string>
 </resources>
