--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     <string name="cycle_start_date">First cycle start</string>
     <string name="cycle_reminders">Cyclic reminders</string>
     <string name="weekday_limited">Limited to some weekdays</string>
+    <string name="reminders">Reminders</string>
 </resources>
