--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -25,7 +25,7 @@
     <string name="reminder_event">%1$s von %2$s\n%3$s</string>
     <string name="recent_reminders">Kürzliche Erinnerungen</string>
     <string name="next_reminder">Nächste Erinnerung</string>
-    <plurals name="reminders_per_day">
+    <plurals name="sum_reminders">
         <item quantity="one">%1$d Erinnerung pro Tag\n%2$s</item>
         <item quantity="other">%1$d Erinnerungen pro Tag\n%2$s</item>
     </plurals>
@@ -59,4 +59,6 @@
     <string name="create_reminder_dosage_hint">Dosierung für neue Erinnerung</string>
     <string name="notification_tone_title">Benachrichtigungston</string>
     <string name="select_format">Format auswählen</string>
+    <string name="remind_every">Erinnere alle</string>
+    <string name="days">Tage</string>
 </resources>
