--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -63,4 +63,5 @@
     <string name="theme">Tema</string>
     <string name="default_theme">Estándar</string>
     <string name="alternative">Alternativo</string>
+    <string name="instructions">Indicaciones</string>
 </resources>
