--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -21,7 +21,7 @@
         <item quantity="other">%1$d recordatorios\n%2$s</item>
     </plurals>
     <string name="notification_title">Toma tu medicación</string>
-    <string name="notification_content">Son las %1$s - hora de tomar %2$s de %3$s</string>
+    <string name="notification_content">Son las %1$s - hora de tomar %2$s de %3$s%4$s</string>
     <string name="notification_taken">TOMADO</string>
     <string name="taken">Tomado</string>
     <string name="skipped">Omitido</string>
@@ -63,4 +63,10 @@
     <string name="theme">Tema</string>
     <string name="default_theme">Estándar</string>
     <string name="alternative">Alternativo</string>
+    <string name="instructions">Instrucciones</string>
+    <string name="no_instructions">no hay instrucciones</string>
+    <string name="before_meal">antes de la comida</string>
+    <string name="after_meal">después de la comida</string>
+    <string name="time_before_meal">30 minutos antes de la comida</string>
+    <string name="time_after">2 horas después del medicamento</string>
 </resources>
