--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -64,10 +64,11 @@
     <string name="theme">Theme</string>
     <string name="default_theme">Standard</string>
     <string name="alternative">Alternativ</string>
-    <string name="instructions">Hinweise</string>
-    <string name="no_instructions">keine Hinweise</string>
+    <string name="instructions">Hinweis</string>
+    <string name="no_instructions">kein Hinweis</string>
     <string name="before_meal">vor der Mahlzeit</string>
     <string name="after_meal">nach der Mahlzeit</string>
-    <string name="time_before_meal">30 Minuten vor der Mahlzeit</string>
-    <string name="time_after">2 Stunden nach Medikament</string>
+    <string name="time_before_meal">x Minuten vor der Mahlzeit</string>
+    <string name="time_after">x Stunden nach Medikament y</string>
+    <string name="instruction_templates">Hinweisvorlagen</string>
 </resources>
