--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,6 +70,7 @@
     <string name="no_instructions">no instructions</string>
     <string name="before_meal">before the meal</string>
     <string name="after_meal">after the meal</string>
-    <string name="time_before_meal">30 minutes before the meal</string>
-    <string name="time_after">2 hours after medicine</string>
+    <string name="time_before_meal">x minutes before the meal</string>
+    <string name="time_after">x hours after medicine y</string>
+    <string name="instruction_templates">Instruction templates</string>
 </resources>
