--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="notification_taken">TAKEN</string>
     <string name="taken">Taken</string>
     <string name="skipped">Skipped</string>
-    <string name="reminder_event">%1$s of %2$s\n%3$s</string>
+    <string name="reminder_event">%1$s of %2$s, %3$s</string>
     <string name="recent_reminders">Recent reminders</string>
     <string name="next_reminder">Next reminder</string>
     <string name="version">Version %s</string>
