--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="notification_taken">TAKEN</string>
     <string name="taken">Taken</string>
     <string name="skipped">Skipped</string>
-    <string name="reminder_event">%1$s of %2$s\n%3$s</string>
+    <string name="reminder_event">%1$s of %2$s, %3$s</string>
     <string name="recent_reminders">Recent reminders</string>
     <string name="next_reminder">Next reminder</string>
     <string name="version">Version %s</string>
@@ -66,10 +66,10 @@
     <string name="default_theme">Default</string>
     <string name="alternative">Alternative</string>
     <string name="instructions">Instructions</string>
-    <string name="three_dots" translatable="false">...</string>
     <string name="no_instructions">no instructions</string>
     <string name="before_meal">before the meal</string>
     <string name="after_meal">after the meal</string>
-    <string name="time_before_meal">30 minutes before the meal</string>
-    <string name="time_after">2 hours after medicine</string>
+    <string name="time_before_meal">x minutes before the meal</string>
+    <string name="time_after">x hours after medicine y</string>
+    <string name="instruction_templates">Instruction templates</string>
 </resources>
