--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -70,4 +70,5 @@
     <string name="time_before_meal">x minutos antes de la comida</string>
     <string name="time_after">x horas después del medicamento y</string>
     <string name="instruction_templates">Plantillas de instrucciones</string>
+    <string name="instructions_label">Instrucciones adicionales (por ejemplo, antes de las comidas)</string>
 </resources>
