--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="time_before_meal">x minutes before the meal</string>
     <string name="time_after">x hours after medicine y</string>
     <string name="instruction_templates">Instruction templates</string>
+    <string name="instructions_label">Additional instructions (e.g. before meals)</string>
 </resources>
