Implemented restore Connected functionality to menu

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -73,4 +73,7 @@
     <string name="instruction_templates">Hinweisvorlagen</string>
     <string name="instructions_label">Zusätzliche Hinweise (z.B. vor einer Mahlzeit)</string>
     <string name="backup_medicine">Backup der Medikamente</string>
+    <string name="create">Erstellen</string>
+    <string name="restore">Wiederherstellen</string>
+    <string name="restore_failed">Wiederherstellen fehlgeschlagen</string>
 </resources>
