--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -72,4 +72,7 @@
     <string name="instruction_templates">Plantillas de instrucciones</string>
     <string name="instructions_label">Instrucciones adicionales (por ejemplo, antes de las comidas)</string>
     <string name="backup_medicine">Backup de los medicamentos</string>
+    <string name="create">Crear</string>
+    <string name="restore">Restaurar</string>
+    <string name="restore_failed">Error de restauración</string>
 </resources>
