--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -76,4 +76,6 @@
     <string name="create">Erstellen</string>
     <string name="restore">Wiederherstellen</string>
     <string name="restore_failed">Wiederherstellen fehlgeschlagen</string>
+    <string name="backup_failed">Erstellen fehlgeschlagen</string>
+    <string name="export_failed">Exportieren fehlgeschlagen</string>
 </resources>
