--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,6 @@
     <string name="create">Create</string>
     <string name="restore">Restore</string>
     <string name="restore_failed">Restore failed</string>
+    <string name="backup_failed">Backup failed</string>
+    <string name="export_failed">Export failed</string>
 </resources>
